fixed bug causing scrollbar to be unclickable

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -37,8 +37,6 @@
     position: fixed;
     height: 100%;
     width: 100%;
-
-    pointer-events: none;
 }
 
 .contentMask {
